[package]
name = "currency-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
clap_derive = "4.5.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.36.0", features = ["full"] }
spinoff = { version = "0.8.0", features = ["dots"] }
